test/langtools/tools/javac/sealed/separate/TestSeparate_Neg.out
TestSeparate_Neg.java:8:12: compiler.err.cant.inherit.from.sealed: SealedClasses.SC
TestSeparate_Neg.java:9:12: compiler.err.cant.inherit.from.sealed: SealedClasses.SAC
TestSeparate_Neg.java:10:12: compiler.err.cant.inherit.from.sealed: SealedClasses.SI
TestSeparate_Neg.java:11:12: compiler.err.cant.inherit.from.sealed: SealedClasses.SI
4 errors
